Revert "Health system: Improve code coverage"